--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/Movies.png
+    - assets/Music.png
+    - assets/Plays.png
+    - assets/SeeAll.png
+    - assets/Sports.png
+    - assets/Stream.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
