--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/SeeAll.png
     - assets/Sports.png
     - assets/Stream.png
+    - assets/Comedy.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
