--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,13 +65,18 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/Movies.png
-    - assets/Music.png
-    - assets/Plays.png
-    - assets/SeeAll.png
-    - assets/Sports.png
-    - assets/Stream.png
-    - assets/Comedy.png
+    - assets/logos/Movies.png
+    - assets/logos/Music.png
+    - assets/logos/Plays.png
+    - assets/logos/SeeAll.png
+    - assets/logos/Sports.png
+    - assets/logos/Stream.png
+    - assets/logos/Comedy.png
+    - assets/images/SampleImages (1).jpg
+    - assets/images/SampleImages (2).jpg
+    - assets/images/SampleImages (3).jpg
+    - assets/images/SampleImages (4).jpg
+    - assets/images/SampleImages (5).jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
