Started Bottom Nav Bar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
     - assets/logos/Sports.png
     - assets/logos/Stream.png
     - assets/logos/Comedy.png
+    - assets/logos/bms_logo.png
+    - assets/logos/home.png
     - assets/images/SampleImages (1).jpg
     - assets/images/SampleImages (2).jpg
     - assets/images/SampleImages (3).jpg
