--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/SampleImages (3).jpg
     - assets/images/SampleImages (4).jpg
     - assets/images/SampleImages (5).jpg
+    - lib/utils/bookmyshow.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
